# Aetherion-Astrophysics-Suite

./: .gitignore  AppIcon.icns  CMakeLists.txt  CMakePresets.json  DEPENDENCIES.md  FAQ_TROUBLESHOOTING.md  README.md  TODO.md  UNIFIED_WINDOW_MANAGEMENT.md  bundle_app.sh  fuckingrebuild.sh  make_pkg.sh  makebackground.py  makedisktexture.py
flatpak/: get-checksums.sh  io.github.ArandomHitman.AetherionSuite.desktop  io.github.ArandomHitman.AetherionSuite.json  io.github.ArandomHitman.AetherionSuite.metainfo.xml
shaders/: bloom_composite.frag  blur.frag  luminosity_highpass.frag  simple.vert
src/: Info.plist.in  platform.hpp
src/2D/: BlackHole2D.cpp
src/2D/2D-core/: body_visual.hpp  custom.hpp
src/2D/2D-physics/: geodesic.hpp  integrator.hpp  pulsar_orbital.hpp  schwarzschild.hpp  units.hpp
src/2D/2D-rendering/: camera.hpp  renderer.hpp
src/2D/2D-simulation/: FITS_export.hpp  black_hole.hpp  csv_export.hpp  orbiting_body.hpp  photon.hpp  research_data.hpp  simulation.hpp
src/2D/2D-ui/: controls.hpp
src/2D/2D-utils/: key_config_2d.hpp  presets_2d.hpp
src/2D/2D-visualization/: orbit_visualizer.hpp  ray_visualizer.hpp
src/3D/: BlackHole3D.cpp  BlackHole3D.frag  BlackHole3D_PhotorealDisk.frag  bloom_pipeline.hpp  camera_controller.hpp  config.hpp  framebuffer.hpp  gl_font.hpp  gl_types.hpp  input.hpp  orbital_body.hpp  presets.hpp  resource_manager.hpp  shader_sources.hpp  shader_utils.cpp  shader_utils.hpp  simulation_state.hpp  texture_utils.cpp  texture_utils.hpp
src/MAIN-MENU/: launcher.hpp  libraries.hpp  main.cpp
src/QT-LAUNCHER/: Info.plist.in  custom_bh_dialog.cpp  custom_bh_dialog.h  keybindbuttonwidget.cpp  keybindbuttonwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  sfml_canvas.cpp  sfml_canvas.h  simulation_2d_widget.cpp  simulation_2d_widget.h  simulation_3d_widget.cpp  simulation_3d_widget.h  updater.cpp  updater.h
tests/: physics_regression_tests.cpp
